# gimme

./: Cargo.toml  LICENSE  README.md  notes.md
.github/workflows/: main.yml  release.yml  test-and-compile.yml
src/: contacts.rs  email.rs  hyperlinks.rs  lib.rs  main.rs  output.rs  sources.rs
