[package]
name = "gimme"
version = "0.1.6"
description = "Pull useful data out of your clipboard."
repository = "https://github.com/maxdobeck/gimme"
authors = ["Max Dobeck <max.dobeck@protonmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33.1"
lazy_static = "1.4.0"
regex = "1"
clipboard = "0.5.0"
linkify = "0.4.0"