[package]
name = "gimme"
version = "0.1.12"
description = "Pull useful data out of your clipboard."
keywords = ["cli", "clipboard"]
categories = ["text-processing", "parsing", "command-line-utilities"]
repository = "https://github.com/maxdobeck/gimme"
authors = ["Max Dobeck <msdobeck@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~3.0.13", features = ["cargo"] }
lazy_static = "1.4.0"
regex = "1"
clipboard = "0.5.0"
linkify = "0.8.0"